# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,12 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import registerRouter from "./register";
+import attendanceRouter from "./attendance";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(registerRouter);
+router.use(attendanceRouter);
 
 export default router;
